Fix z-index, add bac1p, remove 2nd year, fix scrapper

--- a/css/custom_1.css
+++ b/css/custom_1.css
@@ -260,7 +260,7 @@ html, body{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    z-index: 5;
+    z-index: 4;
 }
 
 .groupA, .groupB{
